infra.json
{
  "Metadata": {
    "DcosImageCommit": "fbec5b3732e80f2d5f65192539c49ba5ab9ab753",
    "TemplateGenerationDate": "2016-07-29 10:19:32.666479"
  },
  "Resources": {
    "PublicAgentIngressFive": {
      "Properties": {
        "CidrIp": "0.0.0.0/0",
        "GroupId": {
          "Ref": "PublicAgentSecurityGroup"
        },
        "IpProtocol": "udp",
        "ToPort": "5050",
        "FromPort": "23"
      },
      "Type": "AWS::EC2::SecurityGroupIngress"
    },
    "PublicSubnetRouteTableAssociation": {
      "Properties": {
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        },
        "SubnetId": {
          "Ref": "PublicSubnet"
        }
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation"
    },
    "PublicAgentIngressSix": {
      "Properties": {
        "CidrIp": "0.0.0.0/0",
        "GroupId": {
          "Ref": "PublicAgentSecurityGroup"
        },
        "IpProtocol": "udp",
        "ToPort": "32000",
        "FromPort": "5052"
      },
      "Type": "AWS::EC2::SecurityGroupIngress"
    },
    "LbSecurityGroup": {
      "Properties": {
        "VpcId": {
          "Ref": "Vpc"
        },
        "GroupDescription": "Mesos Master LB"
      },
      "Type": "AWS::EC2::SecurityGroup"
    },
    "OutboundNetworkAclEntry": {
      "Properties": {
        "RuleAction": "allow",
        "Egress": "true",
        "Protocol": "-1",
        "CidrBlock": "0.0.0.0/0",
        "NetworkAclId": {
          "Ref": "PublicNetworkAcl"
        },
        "PortRange": {
          "From": "0",
          "To": "65535"
        },
        "RuleNumber": "100"
      },
      "Type": "AWS::EC2::NetworkAclEntry"
    },
    "AdminSecurityGroup": {
      "Properties": {
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Ref": "AdminLocation"
            },
            "IpProtocol": "tcp",
            "ToPort": "22",
            "FromPort": "22"
          },
          {
            "CidrIp": {
              "Ref": "AdminLocation"
            },
            "IpProtocol": "tcp",
            "ToPort": "80",
            "FromPort": "80"
          },
          {
            "CidrIp": {
              "Ref": "AdminLocation"
            },
            "IpProtocol": "tcp",
            "ToPort": "443",
            "FromPort": "443"
          }
        ],
        "VpcId": {
          "Ref": "Vpc"
        },
        "GroupDescription": "Enable admin access to servers"
      },
      "Type": "AWS::EC2::SecurityGroup"
    },
    "PublicAgentIngressTwo": {
      "Properties": {
        "CidrIp": "0.0.0.0/0",
        "GroupId": {
          "Ref": "PublicAgentSecurityGroup"
        },
        "IpProtocol": "tcp",
        "ToPort": "5050",
        "FromPort": "23"
      },
      "Type": "AWS::EC2::SecurityGroupIngress"
    },
    "MasterSecurityGroup": {
      "Properties": {
        "SecurityGroupIngress": [
          {
            "SourceSecurityGroupId": {
              "Ref": "LbSecurityGroup"
            },
            "IpProtocol": "tcp",
            "ToPort": "5050",
            "FromPort": "5050"
          },
          {
            "SourceSecurityGroupId": {
              "Ref": "LbSecurityGroup"
            },
            "IpProtocol": "tcp",
            "ToPort": "80",
            "FromPort": "80"
          },
          {
            "SourceSecurityGroupId": {
              "Ref": "LbSecurityGroup"
            },
            "IpProtocol": "tcp",
            "ToPort": "8080",
            "FromPort": "8080"
          },
          {
            "SourceSecurityGroupId": {
              "Ref": "LbSecurityGroup"
            },
            "IpProtocol": "tcp",
            "ToPort": "8181",
            "FromPort": "8181"
          },
          {
            "SourceSecurityGroupId": {
              "Ref": "LbSecurityGroup"
            },
            "IpProtocol": "tcp",
            "ToPort": "2181",
            "FromPort": "2181"
          }
        ],
        "VpcId": {
          "Ref": "Vpc"
        },
        "GroupDescription": "Mesos Masters"
      },
      "Type": "AWS::EC2::SecurityGroup"
    },
    "PrivateSubnetRouteTableAssociation": {
      "Properties": {
        "RouteTableId": {
          "Ref": "PrivateRouteTable"
        },
        "SubnetId": {
          "Ref": "PrivateSubnet"
        }
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation"
    },
    "PublicAgentToMasterIngress": {
      "Properties": {
        "SourceSecurityGroupId": {
          "Ref": "PublicAgentSecurityGroup"
        },
        "GroupId": {
          "Ref": "MasterSecurityGroup"
        },
        "IpProtocol": "-1",
        "ToPort": "65535",
        "FromPort": "0"
      },
      "Type": "AWS::EC2::SecurityGroupIngress"
    },
    "PrivateOutboundNetworkAclEntry": {
      "Properties": {
        "RuleAction": "allow",
        "Egress": "true",
        "Protocol": "-1",
        "CidrBlock": "0.0.0.0/0",
        "NetworkAclId": {
          "Ref": "PrivateNetworkAcl"
        },
        "PortRange": {
          "From": "0",
          "To": "65535"
        },
        "RuleNumber": "100"
      },
      "Type": "AWS::EC2::NetworkAclEntry"
    },
    "PublicRouteTable": {
      "Properties": {
        "Tags": [
          {
            "Value": {
              "Ref": "AWS::StackName"
            },
            "Key": "Application"
          },
          {
            "Value": "Public",
            "Key": "Network"
          }
        ],
        "VpcId": {
          "Ref": "Vpc"
        }
      },
      "Type": "AWS::EC2::RouteTable"
    },
    "PublicAgentSecurityGroup": {
      "Properties": {
        "VpcId": {
          "Ref": "Vpc"
        },
        "GroupDescription": "Mesos Public Agents"
      },
      "Type": "AWS::EC2::SecurityGroup"
    },
    "PublicRoute": {
      "Properties": {
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        },
        "GatewayId": {
          "Ref": "InternetGateway"
        },
        "DestinationCidrBlock": "0.0.0.0/0"
      },
      "Type": "AWS::EC2::Route"
    },
    "PrivateInboundNetworkAclEntry": {
      "Properties": {
        "RuleAction": "allow",
        "Egress": "false",
        "Protocol": "-1",
        "CidrBlock": "0.0.0.0/0",
        "NetworkAclId": {
          "Ref": "PrivateNetworkAcl"
        },
        "PortRange": {
          "From": "0",
          "To": "65535"
        },
        "RuleNumber": "100"
      },
      "Type": "AWS::EC2::NetworkAclEntry"
    },
    "MasterToMasterIngress": {
      "Properties": {
        "SourceSecurityGroupId": {
          "Ref": "MasterSecurityGroup"
        },
        "GroupId": {
          "Ref": "MasterSecurityGroup"
        },
        "IpProtocol": "-1",
        "ToPort": "65535",
        "FromPort": "0"
      },
      "Type": "AWS::EC2::SecurityGroupIngress"
    },
    "ExhibitorS3Bucket": {
      "Type": "AWS::S3::Bucket",
      "DeletionPolicy": "Retain"
    },
    "PrivateSubnetNetworkAclAssociation": {
      "Properties": {
        "SubnetId": {
          "Ref": "PrivateSubnet"
        },
        "NetworkAclId": {
          "Ref": "PrivateNetworkAcl"
        }
      },
      "Type": "AWS::EC2::SubnetNetworkAclAssociation"
    },
    "PrivateAgentToPublicAgentIngress": {
      "Properties": {
        "SourceSecurityGroupId": {
          "Ref": "PrivateAgentSecurityGroup"
        },
        "GroupId": {
          "Ref": "PublicAgentSecurityGroup"
        },
        "IpProtocol": "-1",
        "ToPort": "65535",
        "FromPort": "0"
      },
      "Type": "AWS::EC2::SecurityGroupIngress"
    },
    "PrivateAgentToMasterLBIngress": {
      "Properties": {
        "SourceSecurityGroupId": {
          "Ref": "PrivateAgentSecurityGroup"
        },
        "GroupId": {
          "Ref": "LbSecurityGroup"
        },
        "IpProtocol": "tcp",
        "ToPort": "2181",
        "FromPort": "2181"
      },
      "Type": "AWS::EC2::SecurityGroupIngress"
    },
    "InboundNetworkAclEntry": {
      "Properties": {
        "RuleAction": "allow",
        "Egress": "false",
        "Protocol": "-1",
        "CidrBlock": "0.0.0.0/0",
        "NetworkAclId": {
          "Ref": "PublicNetworkAcl"
        },
        "PortRange": {
          "From": "0",
          "To": "65535"
        },
        "RuleNumber": "100"
      },
      "Type": "AWS::EC2::NetworkAclEntry"
    },
    "PublicAgentIngressThree": {
      "Properties": {
        "CidrIp": "0.0.0.0/0",
        "GroupId": {
          "Ref": "PublicAgentSecurityGroup"
        },
        "IpProtocol": "tcp",
        "ToPort": "32000",
        "FromPort": "5052"
      },
      "Type": "AWS::EC2::SecurityGroupIngress"
    },
    "PrivateRoute": {
      "Properties": {
        "RouteTableId": {
          "Ref": "PrivateRouteTable"
        },
        "InstanceId": {
          "Ref": "NATInstance"
        },
        "DestinationCidrBlock": "0.0.0.0/0"
      },
      "Type": "AWS::EC2::Route"
    },
    "PublicNetworkAcl": {
      "Properties": {
        "Tags": [
          {
            "Value": {
              "Ref": "AWS::StackName"
            },
            "Key": "Application"
          },
          {
            "Value": "Public",
            "Key": "Network"
          }
        ],
        "VpcId": {
          "Ref": "Vpc"
        }
      },
      "Type": "AWS::EC2::NetworkAcl"
    },
    "MasterToPublicAgentIngress": {
      "Properties": {
        "SourceSecurityGroupId": {
          "Ref": "MasterSecurityGroup"
        },
        "GroupId": {
          "Ref": "PublicAgentSecurityGroup"
        },
        "IpProtocol": "-1",
        "ToPort": "65535",
        "FromPort": "0"
      },
      "Type": "AWS::EC2::SecurityGroupIngress"
    },
    "PrivateNetworkAcl": {
      "Properties": {
        "Tags": [
          {
            "Value": {
              "Ref": "AWS::StackName"
            },
            "Key": "Application"
          },
          {
            "Value": "Public",
            "Key": "Network"
          }
        ],
        "VpcId": {
          "Ref": "Vpc"
        }
      },
      "Type": "AWS::EC2::NetworkAcl"
    },
    "PrivateRouteTable": {
      "Properties": {
        "Tags": [
          {
            "Value": {
              "Ref": "AWS::StackName"
            },
            "Key": "Application"
          },
          {
            "Value": "Private",
            "Key": "Network"
          }
        ],
        "VpcId": {
          "Ref": "Vpc"
        }
      },
      "Type": "AWS::EC2::RouteTable"
    },
    "PrivateAgentSecurityGroup": {
      "Properties": {
        "VpcId": {
          "Ref": "Vpc"
        },
        "GroupDescription": "Mesos Private Agents"
      },
      "Type": "AWS::EC2::SecurityGroup"
    },
    "PublicAgentIngressFour": {
      "Properties": {
        "CidrIp": "0.0.0.0/0",
        "GroupId": {
          "Ref": "PublicAgentSecurityGroup"
        },
        "IpProtocol": "udp",
        "ToPort": "21",
        "FromPort": "0"
      },
      "Type": "AWS::EC2::SecurityGroupIngress"
    },
    "PublicAgentToPrivateAgentIngress": {
      "Properties": {
        "SourceSecurityGroupId": {
          "Ref": "PublicAgentSecurityGroup"
        },
        "GroupId": {
          "Ref": "PrivateAgentSecurityGroup"
        },
        "IpProtocol": "-1",
        "ToPort": "65535",
        "FromPort": "0"
      },
      "Type": "AWS::EC2::SecurityGroupIngress"
    },
    "PublicAgentIngressOne": {
      "Properties": {
        "CidrIp": "0.0.0.0/0",
        "GroupId": {
          "Ref": "PublicAgentSecurityGroup"
        },
        "IpProtocol": "tcp",
        "ToPort": "21",
        "FromPort": "0"
      },
      "Type": "AWS::EC2::SecurityGroupIngress"
    },
    "PublicAgentToPublicAgentIngress": {
      "Properties": {
        "SourceSecurityGroupId": {
          "Ref": "PublicAgentSecurityGroup"
        },
        "GroupId": {
          "Ref": "PublicAgentSecurityGroup"
        },
        "IpProtocol": "-1",
        "ToPort": "65535",
        "FromPort": "0"
      },
      "Type": "AWS::EC2::SecurityGroupIngress"
    },
    "PrivateAgentToMasterIngress": {
      "Properties": {
        "SourceSecurityGroupId": {
          "Ref": "PrivateAgentSecurityGroup"
        },
        "GroupId": {
          "Ref": "MasterSecurityGroup"
        },
        "IpProtocol": "-1",
        "ToPort": "65535",
        "FromPort": "0"
      },
      "Type": "AWS::EC2::SecurityGroupIngress"
    },
    "PublicSubnetNetworkAclAssociation": {
      "Properties": {
        "SubnetId": {
          "Ref": "PublicSubnet"
        },
        "NetworkAclId": {
          "Ref": "PublicNetworkAcl"
        }
      },
      "Type": "AWS::EC2::SubnetNetworkAclAssociation"
    },
    "NATInstance": {
      "Properties": {
        "KeyName": {
          "Ref": "KeyName"
        },
        "SourceDestCheck": "false",
        "NetworkInterfaces": [
          {
            "DeviceIndex": "0",
            "SubnetId": {
              "Ref": "PublicSubnet"
            },
            "DeleteOnTermination": "true",
            "GroupSet": [
              {
                "Ref": "PrivateAgentSecurityGroup"
              },
              {
                "Ref": "MasterSecurityGroup"
              },
              {
                "Ref": "AdminSecurityGroup"
              }
            ],
            "AssociatePublicIpAddress": "true"
          }
        ],
        "Tags": [
          {
            "Value": "NATInstance",
            "Key": "role"
          }
        ],
        "InstanceType": "t2.large",
        "ImageId": {
          "Fn::FindInMap": [
            "NATAmi",
            {
              "Ref": "AWS::Region"
            },
            "default"
          ]
        }
      },
      "Type": "AWS::EC2::Instance"
    },
    "MasterToPrivateAgentIngress": {
      "Properties": {
        "SourceSecurityGroupId": {
          "Ref": "MasterSecurityGroup"
        },
        "GroupId": {
          "Ref": "PrivateAgentSecurityGroup"
        },
        "IpProtocol": "-1",
        "ToPort": "65535",
        "FromPort": "0"
      },
      "Type": "AWS::EC2::SecurityGroupIngress"
    },
    "PrivateAgentToPrivateAgentIngress": {
      "Properties": {
        "SourceSecurityGroupId": {
          "Ref": "PrivateAgentSecurityGroup"
        },
        "GroupId": {
          "Ref": "PrivateAgentSecurityGroup"
        },
        "IpProtocol": "-1",
        "ToPort": "65535",
        "FromPort": "0"
      },
      "Type": "AWS::EC2::SecurityGroupIngress"
    }
  },
  "Mappings": {
    "NATAmi": {
      "sa-east-1": {
        "default": "ami-b972dba4"
      },
      "ap-southeast-1": {
        "default": "ami-b082dae2"
      },
      "us-east-1": {
        "default": "ami-4c9e4b24"
      },
      "us-west-2": {
        "default": "ami-bb69128b"
      },
      "us-west-1": {
        "default": "ami-2b2b296e"
      },
      "eu-west-1": {
        "default": "ami-3760b040"
      },
      "eu-central-1": {
        "default": "ami-204c7a3d"
      },
      "ap-northeast-1": {
        "default": "ami-55c29e54"
      },
      "ap-southeast-2": {
        "default": "ami-996402a3"
      }
    }
  },
  "Outputs": {
    "LbSecurityGroupId": {
      "Value": {
        "Ref": "LbSecurityGroup"
      },
      "Description": "Security group used by Mesos Load Balancers"
    },
    "PublicAgentSecurityGroupId": {
      "Value": {
        "Ref": "PublicAgentSecurityGroup"
      },
      "Description": "Security group used by Mesos Public Agents"
    },
    "MasterSecurityGroupId": {
      "Value": {
        "Ref": "MasterSecurityGroup"
      },
      "Description": "Security group used by Mesos Masters"
    },
    "AdminSecurityGroupId": {
      "Value": {
        "Ref": "AdminSecurityGroup"
      },
      "Description": "Security group used for Mesos Admin UI"
    },
    "ExhibitorS3BucketId": {
      "Value": {
        "Ref": "ExhibitorS3Bucket"
      },
      "Description": "S3 bucket name for use by Exhibitor"
    },
    "PrivateAgentSecurityGroupId": {
      "Value": {
        "Ref": "PrivateAgentSecurityGroup"
      },
      "Description": "Security group used by Mesos Private Agents"
    }
  },
  "Parameters": {
    "KeyName": {
      "Type": "AWS::EC2::KeyPair::KeyName",
      "Description": "\nSpecify your AWS EC2 Key Pair."
    },
    "Vpc": {
      "Type": "AWS::EC2::VPC::Id",
      "Description": "\nExisting VPC to use. Nodes will be launched using subnets and Internet Gateway under this VPC"
    },
    "PrivateSubnet": {
      "Type": "AWS::EC2::Subnet::Id",
      "Description": "\nSubnet ID for use by all private agent nodes"
    },
    "AdminLocation": {
      "MinLength": "9",
      "AllowedPattern": "^([0-9]+\\.){3}[0-9]+\\/[0-9]+$",
      "Description": "\nOptional: Specify the IP range to whitelist for access to the admin zone. Must be a valid CIDR.",
      "MaxLength": "18",
      "ConstraintDescription": "must be a valid CIDR.",
      "Type": "String",
      "Default": "0.0.0.0/0"
    },
    "PublicSubnet": {
      "Type": "AWS::EC2::Subnet::Id",
      "Description": "\nSubnet ID for use by all public agent nodes"
    },
    "InternetGateway": {
      "Type": "String",
      "Description": "\nInternet Gateway ID, must be attached to the 'Vpc'. Used by all nodes for outgoing Internet access."
    }
  },
  "AWSTemplateFormatVersion": "2010-09-09"
}
